--- a/likedcats.html
+++ b/likedcats.html
@@ -14,16 +14,10 @@
   <body>
 
     <div class="container-xl">
-        <a href="likedcats.html" class="btn btn-primary">Liked Cats</a>
-        <div class="row row-cols-2 row-cols-md-4 g-2" id="catsRow">
+        <a href="index.html" class="btn btn-primary">Go back</a>
+        <div class="row row-cols-2 row-cols-md-4 g-2" id="likedCatsRow">
 
         </div> <!-- row ends-->
-        
-        <!-- Button trigger modal -->
-        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-         </button> -->
-  
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
